# signserver-pkcs11

./: CMakeLists.txt  COPYING  README.md  attr.c  attr.h  key.c  key.h  keyctl-load.sh  keyutil-pkcs11.h  link.c  link.h  object.c  object.h  pkcs11.c  pkcs11.h  plainsign.c  session.c  session.h  signature.c  signature.h  signserver-pkcs11.h  signserver-pkcs11.ini  signserver-pkcs11.module.in  slot.c  slot.h  storage.c  storage.h  test.c  unavailable.c  x509.c  x509.h
.github/workflows/: signserver-test.yml
test/: SignServer.properties  SignServer_Client.pfx  SignServer_TLS-CA.pem  openssl.cnf  server-4096.pem  server-ec.pem  signserver-pkcs11-login.ini  signserver-pkcs11.ini  soft-ec.pem  soft-rsa.pem  test.sh
